// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test FilSystem Correctly returns filesystem content 1`] = `
Array [
  Directory {
    "_children": Map {},
    "_id": "testid",
    "_liked": false,
    "_modified": 1645617999076,
    "_name": "Test Directory",
    "_parent": Directory {
      "_children": Map {
        "Test Directory" => [Circular],
        "Test Directory copy" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory copy",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "second dir" => Directory {
          "_children": Map {
            "TestFile.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "TestFile.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "testPng2.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "testPng2.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "abc.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "abc.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "cc123.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "cc123.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
          },
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "second dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "third dir" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "third dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
      },
      "_id": "testid",
      "_liked": false,
      "_modified": 1645617999076,
      "_name": "root",
      "_parent": null,
      "_shared": false,
      "_type": "DEFAULT",
    },
    "_shared": false,
    "_type": "DEFAULT",
  },
  Directory {
    "_children": Map {},
    "_id": "testid",
    "_liked": false,
    "_modified": 1645617999076,
    "_name": "Test Directory copy",
    "_parent": Directory {
      "_children": Map {
        "Test Directory" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "Test Directory copy" => [Circular],
        "second dir" => Directory {
          "_children": Map {
            "TestFile.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "TestFile.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "testPng2.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "testPng2.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "abc.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "abc.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "cc123.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "cc123.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
          },
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "second dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "third dir" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "third dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
      },
      "_id": "testid",
      "_liked": false,
      "_modified": 1645617999076,
      "_name": "root",
      "_parent": null,
      "_shared": false,
      "_type": "DEFAULT",
    },
    "_shared": false,
    "_type": "DEFAULT",
  },
  Directory {
    "_children": Map {
      "TestFile.png" => Fil {
        "_description": "Test file description",
        "_file": undefined,
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "TestFile.png",
        "_parent": [Circular],
        "_shared": false,
        "_size": 4337487,
        "_thumbnail": "",
        "_type": "generic",
      },
      "testPng2.png" => Fil {
        "_description": "Test file description",
        "_file": undefined,
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "testPng2.png",
        "_parent": [Circular],
        "_shared": false,
        "_size": 4337487,
        "_thumbnail": "",
        "_type": "generic",
      },
      "abc.png" => Fil {
        "_description": "Test file description",
        "_file": undefined,
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "abc.png",
        "_parent": [Circular],
        "_shared": false,
        "_size": 4337487,
        "_thumbnail": "",
        "_type": "generic",
      },
      "cc123.png" => Fil {
        "_description": "Test file description",
        "_file": undefined,
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "cc123.png",
        "_parent": [Circular],
        "_shared": false,
        "_size": 4337487,
        "_thumbnail": "",
        "_type": "generic",
      },
    },
    "_id": "testid",
    "_liked": false,
    "_modified": 1645617999076,
    "_name": "second dir",
    "_parent": Directory {
      "_children": Map {
        "Test Directory" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "Test Directory copy" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory copy",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "second dir" => [Circular],
        "third dir" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "third dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
      },
      "_id": "testid",
      "_liked": false,
      "_modified": 1645617999076,
      "_name": "root",
      "_parent": null,
      "_shared": false,
      "_type": "DEFAULT",
    },
    "_shared": false,
    "_type": "DEFAULT",
  },
  Directory {
    "_children": Map {},
    "_id": "testid",
    "_liked": false,
    "_modified": 1645617999076,
    "_name": "third dir",
    "_parent": Directory {
      "_children": Map {
        "Test Directory" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "Test Directory copy" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory copy",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "second dir" => Directory {
          "_children": Map {
            "TestFile.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "TestFile.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "testPng2.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "testPng2.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "abc.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "abc.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "cc123.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "cc123.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
          },
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "second dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "third dir" => [Circular],
      },
      "_id": "testid",
      "_liked": false,
      "_modified": 1645617999076,
      "_name": "root",
      "_parent": null,
      "_shared": false,
      "_type": "DEFAULT",
    },
    "_shared": false,
    "_type": "DEFAULT",
  },
]
`;

exports[`Test FilSystem Move item to a directory 1`] = `
FilSystem {
  "_currentDirectory": Directory {
    "_children": Map {
      "Test Directory" => Directory {
        "_children": Map {},
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "Test Directory",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
      "Test Directory copy" => Directory {
        "_children": Map {},
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "Test Directory copy",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
      "second dir" => Directory {
        "_children": Map {
          "TestFile.png" => Fil {
            "_description": "Test file description",
            "_file": undefined,
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "TestFile.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
          "testPng2.png" => Fil {
            "_description": "Test file description",
            "_file": undefined,
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "testPng2.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
          "abc.png" => Fil {
            "_description": "Test file description",
            "_file": undefined,
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "abc.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
          "cc123.png" => Fil {
            "_description": "Test file description",
            "_file": undefined,
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "cc123.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
        },
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "second dir",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
      "third dir" => Directory {
        "_children": Map {},
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "third dir",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
    },
    "_id": "testid",
    "_liked": false,
    "_modified": 1645617999076,
    "_name": "root",
    "_parent": null,
    "_shared": false,
    "_type": "DEFAULT",
  },
  "_currentDirectoryPath": Array [
    Directory {
      "_children": Map {
        "Test Directory" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "Test Directory copy" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory copy",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "second dir" => Directory {
          "_children": Map {
            "TestFile.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "TestFile.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "testPng2.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "testPng2.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "abc.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "abc.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "cc123.png" => Fil {
              "_description": "Test file description",
              "_file": undefined,
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "cc123.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
          },
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "second dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "third dir" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "third dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
      },
      "_id": "testid",
      "_liked": false,
      "_modified": 1645617999076,
      "_name": "root",
      "_parent": null,
      "_shared": false,
      "_type": "DEFAULT",
    },
  ],
  "_self": Directory {
    "_children": Map {
      "Test Directory" => Directory {
        "_children": Map {},
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "Test Directory",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
      "Test Directory copy" => Directory {
        "_children": Map {},
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "Test Directory copy",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
      "second dir" => Directory {
        "_children": Map {
          "TestFile.png" => Fil {
            "_description": "Test file description",
            "_file": undefined,
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "TestFile.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
          "testPng2.png" => Fil {
            "_description": "Test file description",
            "_file": undefined,
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "testPng2.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
          "abc.png" => Fil {
            "_description": "Test file description",
            "_file": undefined,
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "abc.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
          "cc123.png" => Fil {
            "_description": "Test file description",
            "_file": undefined,
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "cc123.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
        },
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "second dir",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
      "third dir" => Directory {
        "_children": Map {},
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "third dir",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
    },
    "_id": "testid",
    "_liked": false,
    "_modified": 1645617999076,
    "_name": "root",
    "_parent": null,
    "_shared": false,
    "_type": "DEFAULT",
  },
  "_version": 1,
}
`;

exports[`Test FilSystem Navigate to a directory 1`] = `null`;
